stop overlap

--- a/public/stylesheets/event_form.css
+++ b/public/stylesheets/event_form.css
@@ -19,6 +19,10 @@
     ". save del up .";
 }
 
+form > label > input {
+  width: 100%;
+}
+
 #sladd{
   grid-area: addsl;
 }
